MainPageV2: Fixing avatar on My Pages Button on IE8, Making checkbox clickable on "Send an Email" link in Share Modal, Fixed hover on 'tail' of Post Button, Removed hover effect on inline thanks notification within replies.

--- a/app/stylesheets/_header.css.sass
+++ b/app/stylesheets/_header.css.sass
@@ -61,8 +61,15 @@ $black-shadow: 0px 2px 1px black
       float: right
       &:hover
         background-position: 0px -42px
+        .red-button           
+          box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35)
+          +linear-gradient(color-stops(#ee5a56, #b53633), top)
       &:active
         background-position: 0px -82px
+        .red-button
+          box-shadow: inset 0px 1px 0px rgba(255,255,255,0.20)
+          +linear-gradient(color-stops(#d64541, #ac322f), bottom)
+          text-shadow: 0px 1px 0px #64100D
       .red-button
         width: 170px
         font-size: 17px
